[package]
name = "auroradb"
version = "0.1.0"
edition = "2024"
authors = ["Jobet P. Casquejo <jobetcasquejo221@gmail.com>"]
description = "AuroraDB: Hybrid relational + non-relational, memory-safe, temporal Rust database"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
indexmap = "1.9"
rayon = "1.7"
parking_lot = "0.12"
hashbrown = "0.12"
regex = "1.9"
lazy_static = "1.4"
jsonwebtoken = "9.0"

sled = "1.0.0-alpha.124"
dialoguer = "0.10"
console = "0.16"
textwrap = "0.16"

tauri = { version = "1.5", optional = true, features = ["api-all"] }
iced = { version = "0.10", optional = true }
plotters = { version = "0.3", optional = true }

actix-web = { version = "4.3", optional = true }
warp = { version = "0.3", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1.41", features = ["full"], optional = true }
serde_qs = { version = "0.7", optional = true }
async-graphql = { version = "7.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.4"
proptest = "1.0"
mockall = "0.11"
insta = "1.33"
[features]
default = ["cli"]
cli = []
gui = ["tauri", "iced", "plotters"]
web = ["actix-web", "warp", "axum", "tokio", "serde_qs", "async-graphql"]
